--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.min.js"></script>
+
+  <!-- Dynamic Prism loader -->
+  <script src="js/prism-loader.js"></script>
 </body>
 
 </html>
