--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Documentación</title>
+  <title>Home :: Proyectos en Dassi</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -21,9 +21,6 @@
 
   <script src="js/theme.js"></script>
   <script src="js/config.js"></script>
-  <script>
-    window.$docsify = docsify;
-  </script>
   <script src="https://cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.min.js"></script>
 
